--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     >
     <TextView
-        android:id="@+id/cold"
+        android:id="@+id/groupItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="00:00:00.00"
@@ -16,8 +16,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         >
         <Button
+            android:id="@+id/btnLeft"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -25,6 +27,7 @@
             android:onClick="doLeft"
             />
         <Button
+            android:id="@+id/btnRight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -33,7 +36,7 @@
             />
     </LinearLayout>
     <ListView
-        android:id="@+id/lopview"
+        android:id="@+id/LapList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
