--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     >
     <TextView
-        android:id="@+id/groupItem"
+        android:id="@+id/clock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="00:00:00.00"
