--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
         android:id="@+id/clock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#000"
         android:text="00:00:00.00"
         android:textSize="42sp"
         android:textStyle="bold"
+        android:textColor="#fff"
         android:gravity="center"
         />
     <LinearLayout
